<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name" translatable="false">智图牛</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="action_settings">设置</string>
    <string name="action_add">新建图层</string>
    <string name="action_add_local">打开本地文件</string>
    <string name="general">通用</string>
    <string name="general_summary">通用设置</string>
    <string name="keep_screen_on">保持屏幕常亮</string>
    <string name="keep_screen_on_summary">不关闭屏幕</string>
    <string name="show_scale_ruler">显示标尺</string>
    <string name="show_ruler_measuring">显示测量按钮</string>
    <string name="show_zoom_controls">显示缩放空间</string>
    <string name="show_zoom_controls_summary">在地图上显示放大/缩小控件</string>
    <string name="show_compass">显示迷你罗盘</string>
    <string name="map">地图</string>
    <string name="map_summary">地图设置</string>
    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://www.dmsxa.com\">西安度分秒信息技术有限公司</a>, 2017–2022]]></string>
    <string name="contacts"><a href="mail:support@dmsxa.com">联系我们</a></string>
    <string name="action_about">关于</string>
    <string name="add_current_place">添加当前位置</string>
    <string name="add_new_geometry">添加新几何图形</string>
    <string name="add_geometry_by_walk">实测</string>
    <string name="warning_no_edit_layers">没有可编辑图层</string>
    <string name="select_layer">请选择待编辑图层</string>
    <string name="menu_locate">定位</string>
    <string name="select_file">选择要创建图层的文件</string>
    <string name="warning_install_file_manager">请安装文件管理器</string>
    <string name="error_file_unsupported">不支持的文件类型</string>
    <string name="warning_not_implemented">敬请期待</string>
    <string name="pref_location_accuracy">定位精度</string>
    <string name="pref_location_accuracy_gps">GPS</string>
    <string name="pref_location_accuracy_cell">网络定位</string>
    <string name="location">定位</string>
    <string name="track_restore">重新启动后恢复当前</string>
    <string name="tracks_reload">重新启动以应用更改</string>
    <string name="pref_min_time">最短间隔时间</string>
    <string name="pref_min_distance">最短间隔距离</string>
    <string name="meters">米</string>
    <string name="seconds">秒</string>
    <string name="coordinates_format">坐标格式</string>
    <string name="coordinates_fraction_digits">小数精度</string>
    <string name="select_coordinates_format">选择坐标格式</string>
    <string name="coordinates_format_summary">坐标文本格式</string>
    <string name="map_bg">地图背景</string>
    <string name="map_bg_light">亮色</string>
    <string name="map_bg_neutral">自然</string>
    <string name="map_bg_dark">暗色</string>
    <string name="map_path">地图路径</string>
    <string name="map_path_summary">地图数据文件夹的路径。更改地图文件夹可能导致卸载APP后不会删除地图数据</string>
    <string name="select_map_path">选择地图数据存储路径</string>
    <string name="moving">迁移中…</string>
    <string name="warning_map_moving">危险!在将数据传输到新位置的过程中，不要取消或终止应用程序！否则可能会导致您的数据损坏或丢失！</string>
    <string name="warning_folder_should_be_empty">操作已取消, 目标文件夹应该为空文件夹.</string>
    <string name="frequentest">, 尽可能频繁</string>
    <string name="compass_vibrate">在触摸面板时振动</string>
    <string name="compass_true_north">显示真北</string>
    <string name="compass_magnetic">显示磁北</string>
    <string name="compass_keep_screen">保持罗盘屏幕打开</string>
    <string name="accurate_measures_count">全球定位系统测量数</string>
    <string name="action_delete">删除</string>
    <string name="action_attributes">属性</string>
    <string name="show_status_panel">显示状态信息</string>
    <string name="show_current_location">显示当前位置</string>
    <string name="edit_layer">编辑 \'%s\' 图层</string>
    <string name="features_count_attributes">%1$d / %2$d</string>
    <string name="coordinates">Coordinates</string>
    <string name="length">长度</string>
    <string name="center">中心点</string>
    <string name="area">面积</string>
    <string name="perimeter">周长</string>
    <string name="compass_title">罗盘</string>
    <string name="refresh">刷新</string>
    <string name="points_for_edit">点(可编辑)</string>
    <string name="lines_for_edit">线(可编辑)</string>
    <string name="polygons_for_edit">面(可编辑)</string>
    <string name="press_aback_again">再次点击后退出</string>
    <string name="interface_title">界面</string>
    <string name="theme">主题</string>
    <string name="reset_settings">恢复系统设置</string>
    <string name="reset_settings_title">确定?</string>
    <string name="reset_settings_message">所有图层即将被删除，系统将恢复到默认图层.</string>
    <string name="action_point_by_tap">创建新坐标</string>
    <string name="new_field">新建字段</string>
    <string name="empty_name">名称不允许为空</string>
    <string name="same_field_name">该属性名称已存在</string>
    <string name="same_layer_name">该图层名称已存在</string>
    <string name="default_field_name">描述</string>
    <string name="pref_sync_notification">显示同步通知</string>
    <string name="tap_to_measure">点击地图查看信息</string>
    <string name="permissions">权限</string>
    <string name="requested_permissions">APP需要一些权限才能正常工作. 这些权限包括读写存储(存储数据到SD卡)</string>
    <string name="action_support">支持</string>
    <string name="app_support">技术支持.</string>
    <string name="email">Email</string>
    <string name="email_src">support@dmsxa.com</string>
    <string name="web">官网地址</string>
    <string name="web_src">http://www.usermap.cn</string>
    <string name="not_installed">应用未安装</string>
    <string name="action_help">帮助</string>
    <string name="location_distance_to">距离 (m)</string>
    <string name="pref_ga">数据分析</string>
    <string name="pref_ga_sum"> </string>
    <string name="update_new">%1$s版本已存在. 是否选择更新?</string>
    <string name="update_title">更新?</string>
    <string name="update_check">检查更新</string>
    <string name="update_no">暂无更新</string>
    <string name="intro1">欢迎使用智图牛!\n\nAPP可以完成以下功能:\n* 创建多图层地图\n* 添加或新增地图数据\n* 数据采集\n* 轨迹记录\n 更多!</string>
    <string name="intro2">登录后获取更多功能, 同步您的数据 和 获取更多的技术服务支持.</string>
    <string name="support_available">有了新版本</string>
    <string name="more">更多</string>
    <string name="pricing">详情咨询support@dmsxa.com</string>
    <string name="intro1_1">创建多图层</string>
    <string name="intro1_2">新增或添加地图数据</string>
    <string name="intro1_3">数据采集</string>
    <string name="intro1_4">记录轨迹</string>
    <string name="intro2_1">通用版本不支持该功能</string>
    <string name="intro2_2">更新</string>
    <string name="intro2_3">快速问题解决</string>
    <string name="intro2_4">技术支持</string>
    <string name="intro_more">更多:</string>
    <string name="intro_free">通用版本</string>
    <string name="intro_get_pro">获取专业版</string>
    <string name="track_uid">UID: %1$s</string>
    <string name="track_send">发送轨迹到服务器</string>
    <string name="preferred_units">单位</string>
    <string name="show_zoom_level">显示缩放级别</string>
    <string name="restore_layers">恢复以损坏的图层</string>
    <string name="select_layer_to_restore">选择要恢复的图层</string>
    <string name="other">其他</string>
    <string name="extended_logs">扩展数据</string>
    <string name="share_log">分享数据</string>
</resources>
