<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/interface_title">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/theme"
            android:entryValues="@array/theme_val"
            android:key="theme"
            android:title="@string/theme"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_sync"
            android:title="@string/pref_sync_notification"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <Preference
            android:key="reset_settings"
            android:title="@string/reset_settings"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ga_enabled"
            android:summary="@string/pref_ga_sum"
            android:title="@string/pref_ga"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="save_log"
            android:title="@string/extended_logs"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/compass_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="compass_true_north"
            android:title="@string/compass_true_north"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="compass_show_magnetic"
            android:title="@string/compass_magnetic"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="compass_vibration"
            android:title="@string/compass_vibrate"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="compass_wake_lock"
            android:title="@string/compass_keep_screen"/>
    </PreferenceCategory>

</PreferenceScreen>