<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="1"
        android:entryValues="@array/location_accuracy_val"
        android:key="tracks_location_source"
        android:title="@string/pref_location_accuracy"/>

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/tracker_min_time_between_updates"
        android:entryValues="@array/tracker_min_time_between_updates_val"
        android:key="tracks_min_time"
        android:title="@string/pref_min_time"/>

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/tracker_min_dist_update"
        android:entryValues="@array/tracker_min_dist_update_val"
        android:key="tracks_min_distance"
        android:title="@string/pref_min_distance"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="track_restore"
        android:title="@string/track_restore"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="false"
        android:key="track_send"
        android:title="@string/track_send"/>

    <!-- TODO: add
    1) account (or accounts?) to send current location done
    2) tracks group rules - daily, weekly, monthly etc.
    -->

</PreferenceScreen>