<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="1"
        android:entryValues="@array/location_accuracy_val"
        android:key="location_source"
        android:title="@string/pref_location_accuracy" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/tracker_min_time_between_updates"
        android:entryValues="@array/tracker_min_time_between_updates_val"
        android:key="location_min_time"
        android:title="@string/pref_min_time" />

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/tracker_min_dist_update"
        android:entryValues="@array/tracker_min_dist_update_val"
        android:key="location_min_distance"
        android:title="@string/pref_min_distance" />

    <EditTextPreference
        android:defaultValue="20"
        android:inputType="numberDecimal"
        android:key="accurate_max_count"
        android:title="@string/accurate_measures_count" />

</PreferenceScreen>