<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_feature_add"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_new_geometry"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_feature_edit"
        android:icon="@drawable/ic_action_edit_light"
        android:title="@string/action_edit"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_feature_delete"
        android:icon="@drawable/ic_action_delete_alpha"
        android:title="@string/action_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_feature_attributes"
        android:icon="@drawable/ic_action_information_light"
        android:title="@string/action_attributes"
        app:showAsAction="always"/>
</menu>